--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 * {
   padding: 0;
   margin: 0;
+  border: 0;
   font-family: 'JetBrains Mono', monospace;
+}
+
+body {
+  background-color: black;
 }
 
 #text-container {
@@ -10,11 +15,11 @@
 }
 
 textarea {
-  width: 70vw;
+  width: 100vw;
   height: 100vh;
   padding: 12px 20px;
   box-sizing: border-box;
-  border: none;
-  background-color: #f8f8f8;
+  background-color: black;
+  color: white;
   resize: none;
 }
